Word selection one letter short before newline with white-space: pre-line and eat_space true
Categories
(Core :: Layout: Text and Fonts, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox81 | --- | fixed |
People
(Reporter: jscher2000, Assigned: MatsPalmgren_bugz)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:78.0) Gecko/20100101 Firefox/78.0
Steps to reproduce:
In the attached (also hosted at https://www.jeffersonscher.com/res/wordselect.html )
double-clicked the last word in a line to select it. Note: These lines end with a newline before the closing tag.
Actual results:
When the line has white-space: pre-line applied, and Firefox has the Windows default of layout.word_select.eat_space_to_next_word = true, the last character in the word is excluded from the selection. This does not occur if layout.word_select.eat_space_to_next_word is set to false.
Expected results:
The entire word should be selected regardless of the "eat space" setting.
This was discovered accidentally after some recent style rule changes on SUMO.
Updated•6 years ago
|
Comment 1•6 years ago
|
||
ni? to jfkthame. I didn't know layout.word_select.eat_space_to_next_word is true on Windows.
Comment 2•6 years ago
|
||
Huh, curious! This doesn't seem to be a regression, or at least not any time recent (I tried a FF50 build and it reproduced there), so I guess it's probably been broken since forever.
It's fairly edge-casey, given that it seems to just affect white-space: pre-line which is not particularly common AFAIK, but it's clearly a bug.
| Assignee | ||
Comment 4•6 years ago
|
||
| Assignee | ||
Comment 5•6 years ago
|
||
FTR, that code was added in bug 645914.
Comment 7•6 years ago
|
||
| bugherder | ||
Description
•