Bug 1655135 - Don't adjust the PeekOffsetWord offset for 'white-space: pre-line'. In that case the newline is excluded because it's treated as trimmed space.  r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D85329